--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,11 +93,11 @@ set-option -g pane-border-style "fg=#1f2335"
 # -r means that the bind can repeat without entering prefix again
 # -n means that the bind doesn't use the prefix
 
-# Set the prefix to Ctrl+b
-set -g prefix C-b
+# Set the prefix to Ctrl+Space
+set -g prefix C-Space
 
 # Send prefix to a nested tmux session by doubling the prefix
-bind C-b send-prefix
+bind C-Space send-prefix
 
 # 'PREFIX r' to reload of the config file
 unbind r
