--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,21 +1,23 @@
-font_family JetBrainsMono NFM Regular
+# BEGIN_KITTY_THEME
+# include theme.conf
+# END_KITTY_THEME
+
+font_family 0xProto Nerd Font Mono
 bold_font JetBrainsMono NFM Bold
 italic_font JetBrainsMono NFM Italic
 bold_italic_font JetBrainsMono NFM Bold Italic
 
-font_size 13
-modify_font cell_height 180%
+font_size 20
+# modify_font cell_height 180%
 modify_font strikethrough_position 150%
 
 cursor_blink_interval 0
-window_padding_width 10
+window_padding_width 5
 hide_window_decorations yes
-wayland_titlebar_color background
+# wayland_titlebar_color background
 remember_window_size yes
 initial_window_width 1680
 initial_window_height 1200
-enable_audio_bell no
+enable_audio_bell yes
 
-# BEGIN_KITTY_THEME
-include current-theme.conf
-# END_KITTY_THEME
+
