--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -111,12 +111,14 @@
         "runtest": false
     },
     "editor.codeLens": false,
-    "[ruby]": {
-        "editor.formatOnSave": true,
-        "editor.formatOnType": true,
-        "editor.tabSize": 4,
-        "editor.insertSpaces": true,
-        "editor.semanticHighlighting.enabled": true
+    "[rust]": {
+        "rust-analyzer.checkOnSave.command": "clippy",
+        "editor.defaultFormatter": "rust-lang.rust-analyzer"
+    },
+    "[go]": {
+        "editor.defaultFormatter": "golang.go",
+        "gopls.completeUnimported": true,
+        "gopls.staticcheck": true
     },
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
@@ -131,6 +133,5 @@
     "typescript.updateImportsOnFileMove.enabled": "always",
     "javascript.updateImportsOnFileMove.enabled": "always",
     "editor.stickyScroll.enabled": false,
-    "makefile.configureOnOpen": false,
+    "makefile.configureOnOpen": false
 }
-
