Set 0 based index for panes and windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,15 +9,16 @@ setw -g mode-keys vi
 set -g history-limit 10000
 
 # Start window and pane numbering from 1 for easier switching
-set -g base-index 1
-setw -g pane-base-index 1
+set -g base-index 0
+setw -g pane-base-index 0
 
 # Allow automatic renaming of windows
 set -g allow-rename on
-
+# set-option default-terminal "tmux-256color"
 # Renumber windows when one is removed.
 set -g renumber-windows on
-
+# Should allow backspace to delete in copy mode
+# bind-key -T copy-mode-vi Backspace send-keys -X backspace
 # Enable undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
