--- a/nvim/coc-config.json
+++ b/nvim/coc-config.json
@@ -1,81 +1,78 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["rust","go","php","markdown"],
-
-  "workspace.ignoredFolders": ["$HOME", "$HOME/.cargo/**", "$HOME/.rustup/**"],
+  "coc.preferences.formatOnSaveFiletypes": [
+    "rust",
+    "go",
+    "php",
+    "markdown"
+  ],
+  "workspace.ignoredFolders": [
+    "$HOME",
+    "$HOME/.cargo/**",
+    "$HOME/.rustup/**"
+  ],
   "rust-analyzer.enable": true,
   "rust-analyzer.assist.emitMustUse": false,
-  "rust-analyzer.assist.expressionFillDefault": "todo",
+  "rust-analyzer.assist.expressionFillDefault": "unimplemented",
   "rust-analyzer.cachePriming.enable": true,
   "rust-analyzer.cachePriming.numThreads": 0,
   "rust-analyzer.cargo.autoreload": true,
   "rust-analyzer.cargo.buildScripts.enable": true,
   "rust-analyzer.cargo.buildScripts.invocationLocation": "workspace",
-  "rust-analyzer.cargo.buildScripts.invocationStrategy": null,
+  "rust-analyzer.cargo.buildScripts.invocationStrategy": "per_workspace",
   "rust-analyzer.cargo.buildScripts.useRustcWrapper": true,
-  "rust-analyzer.cargo.extraEnv": null,
-  "rust-analyzer.cargo.features": "",
   "rust-analyzer.cargo.noDefaultFeatures": false,
   "rust-analyzer.cargo.sysroot": "discover",
-  "rust-analyzer.cargo.sysrootSrc": null,
-  "rust-analyzer.cargo.target": null,
-  "rust-analyzer.cargo.unsetTest": "core",
   "rust-analyzer.check.allTargets": true,
-  "rust-analyzer.check.command": "check",
-  "rust-analyzer.check.extraArgs": [],
-  "rust-analyzer.check.extraEnv": {},
-  "rust-analyzer.check.features": null,
-  "rust-analyzer.check.invocationLocation": "workspace",
+  "rust-analyzer.check.command": "clippy",
+  "rust-analyzer.check.extraArgs": [
+    "--",
+    "-W",
+    "clippy::all",
+    "-W",
+    "clippy::pedantic"
+  ],
   "rust-analyzer.check.invocationStrategy": "per_workspace",
-  "rust-analyzer.check.noDefaultFeatures": null,
-  "rust-analyzer.check.overrideCommand": null,
-  "rust-analyzer.check.targets": null,
   "rust-analyzer.checkOnSave": true,
   "rust-analyzer.completion.autoimport.enable": true,
   "rust-analyzer.completion.autoself.enable": true,
   "rust-analyzer.completion.callable.snippets": "fill_arguments",
-  "rust-analyzer.completion.limit": null,
+  "rust-analyzer.completion.limit": 200,
   "rust-analyzer.completion.postfix.enable": true,
-  "rust-analyzer.completion.privateEditable.enable": false,
-  "rust-analyzer.debug.runtime": "termdebug",
-  "rust-analyzer.debug.vimspector.configuration.name": "launch",
-  "rust-analyzer.debug.nvimdap.configuration.template": "",
-  "rust-analyzer.diagnostics.disabled": [],
+  "rust-analyzer.completion.privateEditable.enable": true,
   "rust-analyzer.diagnostics.enable": true,
-  "rust-analyzer.diagnostics.experimental.enable": false,
-  "rust-analyzer.diagnostics.remapPrefix": {},
-  "rust-analyzer.diagnostics.warningsAsHint": [],
-  "rust-analyzer.diagnostics.warningsAsInfo": [],
-  "rust-analyzer.disableProgressNotifications": false,
-  "rust-analyzer.files.excludeDirs": [],
+  "rust-analyzer.diagnostics.experimental.enable": true,
+  "rust-analyzer.files.excludeDirs": [
+    "target",
+    ".git",
+    "node_modules",
+    "dist"
+  ],
   "rust-analyzer.files.watcher": "client",
   "rust-analyzer.highlightRelated.breakPoints.enable": true,
   "rust-analyzer.highlightRelated.exitPoints.enable": true,
   "rust-analyzer.highlightRelated.references.enable": true,
-  "rust-analyzer.highlightRelated.yieldPoints.enable": false,
+  "rust-analyzer.highlightRelated.yieldPoints.enable": true,
   "rust-analyzer.hover.documentation.enable": true,
   "rust-analyzer.hover.documentation.keywords.enable": true,
   "rust-analyzer.hover.links.enable": true,
-  "rust-analyzer.imports.granularity.enforce": false,
-  "rust-analyzer.imports.granularity.group": "crate",
+  "rust-analyzer.imports.granularity.enforce": true,
+  "rust-analyzer.imports.granularity.group": "module",
   "rust-analyzer.imports.group.enable": true,
   "rust-analyzer.imports.merge.glob": true,
-  "rust-analyzer.imports.prefer.no.std": false,
-  "rust-analyzer.imports.prefix": "plain",
+  "rust-analyzer.imports.prefix": "crate",
   "rust-analyzer.inlayHints.bindingModeHints.enable": false,
   "rust-analyzer.inlayHints.chainingHints.enable": true,
   "rust-analyzer.inlayHints.closingBraceHints.enable": true,
-  "rust-analyzer.inlayHints.closingBraceHints.minLines": 25,
-  "rust-analyzer.inlayHints.closureReturnTypeHints.enable": "never",
-  "rust-analyzer.inlayHints.discriminantHints.enable": "never",
-  "rust-analyzer.inlayHints.expressionAdjustmentHints.enable": "never",
+  "rust-analyzer.inlayHints.closingBraceHints.minLines": 15,
+  "rust-analyzer.inlayHints.closureReturnTypeHints.enable": "with_block",
+  "rust-analyzer.inlayHints.discriminantHints.enable": "fieldless",
+  "rust-analyzer.inlayHints.expressionAdjustmentHints.enable": "always",
   "rust-analyzer.inlayHints.expressionAdjustmentHints.hideOutsideUnsafe": false,
-  "rust-analyzer.inlayHints.expressionAdjustmentHints.mode": "prefix",
-  "rust-analyzer.inlayHints.lifetimeElisionHints.enable": "never",
-  "rust-analyzer.inlayHints.lifetimeElisionHints.useParameterNames": false,
-  "rust-analyzer.inlayHints.maxLength": 25,
+  "rust-analyzer.inlayHints.lifetimeElisionHints.enable": "skip_trivial",
+  "rust-analyzer.inlayHints.lifetimeElisionHints.useParameterNames": true,
+  "rust-analyzer.inlayHints.maxLength": 50,
   "rust-analyzer.inlayHints.parameterHints.enable": true,
-  "rust-analyzer.inlayHints.reborrowHints.enable": "never",
-  "rust-analyzer.inlayHints.renderColons": true,
+  "rust-analyzer.inlayHints.reborrowHints.enable": "mutable",
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.typeHints.hideClosureInitialization": false,
   "rust-analyzer.inlayHints.typeHints.hideNamedConstructor": false,
@@ -88,6 +85,7 @@
   "rust-analyzer.lens.forceCustomCommands": true,
   "rust-analyzer.lens.implementations.enable": true,
   "rust-analyzer.lens.location": "above_name",
-  "rust-analyzer.lens.references.adt.enable": false,
-  "rust-analyzer.lens.references.enumVariant.enable": false,
-  "rust-analyzer.lens.references.method.enable": false}
+  "rust-analyzer.lens.references.adt.enable": true,
+  "rust-analyzer.lens.references.enumVariant.enable": true,
+  "rust-analyzer.lens.references.method.enable": true
+}
