--- a/ghostty/current.config
+++ b/ghostty/current.config
@@ -1,24 +1,24 @@
-theme = Belafonte Night
-background = #211f1e
-bold-is-bright = true
-foreground = #968c83
-selection-background = #45373c
-selection-foreground = #968c83
-cursor-color = #968c83
-cursor-text = #20111b
-palette = 0=#20111b
-palette = 1=#885554
-palette = 2=#858162
-palette = 3=#B67723
-palette = 4=#757A7C
-palette = 5=#97522c
-palette = 6=#989a9c
-palette = 7=#968c83
-palette = 8=#5e5252
-palette = 9=#347876
-palette = 10=#858162
-palette = 11=#AD6A11
-palette = 12=#4E5D62
-palette = 13=#97522c
-palette = 14=#989a9c
-palette = 15=#d5ccba
+theme = miasma
+background = #222222
+foreground = #c2c2b0
+selection-background = #e5c47b
+selection-foreground = #000000
+cursor-color = #c7c7c7
+cursor-text = #eeeeee
+cursor-invert-fg-bg = true
+palette = 0=#000000
+palette = 1=#685742
+palette = 2=#5f875f
+palette = 3=#b36d43
+palette = 4=#78824b
+palette = 5=#bb7744
+palette = 6=#c9a554
+palette = 7=#d7c483
+palette = 9=#685742
+palette = 10=#5f875f
+palette = 11=#b36d43
+palette = 12=#78824b
+palette = 13=#bb7744
+palette = 14=#c9a554
+palette = 15=#d7c483
+palette = 16=#c9826b
