--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -134,6 +134,9 @@ bind -r P run-shell "tmux swap-window -t $(expr $(tmux list-windows | grep \"(ac
 bind-key > swap-window -t +1 \; next
 bind-key < swap-window -t -1 \; prev
 
+bind c new-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 # Switch between two most recently used windows
 bind Space last-window
 
