--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -149,6 +149,9 @@ bind ^ switch-client -l
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Change the path for newly created windows
 bind c new-window -c "#{pane_current_path}"
 
