--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,8 +7,8 @@ remember_window_size yes
 initial_window_width 1680
 initial_window_height 1200
 enable_audio_bell yes
-font_family Noto Sans Bengali Nerd Font Mono
-
+# font_family Noto Sans Bengali Nerd Font Mono
+font_family DankMono Nerd Font Mono 
 
 # vim:ft=kitty
 ## name: Everforest Dark Hard
