Added a bunch of stuff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -117,7 +117,6 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
@@ -154,6 +153,8 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Change the path for newly created windows
 bind c new-window -c "#{pane_current_path}"
+
+bind S new-session 
 
 # Setup 'v' to begin selection as in Vim
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
